syntax = "proto3";

package app.peerinfo.peerinfopb.v1;

option go_package = "github.com/obolnetwork/charon/app/peerinfo/peerinfopb/v1";

import "google/protobuf/timestamp.proto";

message PeerInfo {
  string                         charon_version = 1;
  bytes                               lock_hash = 2;
  optional google.protobuf.Timestamp    sent_at = 3;
  string                               git_hash = 4;
  optional google.protobuf.Timestamp started_at = 5;
  bool                      builder_api_enabled = 6;

  // TODO(corver): Always populate timestamps when sending, then make them required after subsequent release.
}
